[package]
name = "bevy_raymarch_2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["bevy_dev_tools", "dynamic_linking", "wayland"] }
bevy-inspector-egui = "0.27.0"
bevy_flycam = "0.14.1"
rayon = "1.10.0"
turborand = { version = "0.10.1", features = ["atomic"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"
#
opt-level = "s"
strip = "debuginfo"

